<resources>
    <string name="app_name">Apple Store</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Meow</string>
    <string name="search">Apple Search</string>
    <string name="itunes_search">Itunes Search</string>
    <string name="itunes_store_link">http://www.apple.com/itunes/</string>
    <string name="search_hint">Search</string>
    <string name="image_description">Image Description</string>

    <string name="music">Music</string>
    <string name="software">Software</string>
    <string name="movies">Movies</string>
    <string name="podcasts">Podcasts</string>
    <string name="audiobooks">Audiobooks</string>
    <string name="tv_shows">Tv Shows</string>
</resources>
