<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_music"
            android:title="@string/music" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_software"
            android:title="@string/software" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_movie"
            android:title="@string/movies" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_podcast"
            android:title="@string/podcasts" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_audiobook"
            android:title="@string/audiobooks" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_tv"
            android:title="@string/tv_shows" />

    </group>
</menu>

